// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordInput/> render password input with error 1`] = `
<div
  className="form-group"
>
  <label
    className=""
  >
    Password
  </label>
  <input
    aria-label="Password"
    autoComplete="off"
    className="form-control"
    name="passwordInput"
    onBlur={[Function]}
    onChange={[Function]}
    type="password"
  />
</div>
`;

exports[`<PasswordInput/> render password input with initial value 1`] = `
<div
  className="form-group"
>
  <label
    className=""
  >
    Password
  </label>
  <input
    aria-label="Password"
    autoComplete="off"
    className="form-control"
    name="passwordInput"
    onBlur={[Function]}
    onChange={[Function]}
    type="password"
    value="Admin123"
  />
</div>
`;

exports[`<PasswordInput/> render password input with label 1`] = `
<div
  className="form-group"
>
  <label
    className=""
  >
    Password
  </label>
  <input
    aria-label="Password"
    autoComplete="off"
    className="form-control"
    name="passwordInput"
    onBlur={[Function]}
    onChange={[Function]}
    type="password"
  />
</div>
`;

exports[`<PasswordInput/> render password input without label 1`] = `
<div
  className="form-group"
>
  <input
    autoComplete="off"
    className="form-control"
    name="passwordInput"
    onBlur={[Function]}
    onChange={[Function]}
    type="password"
  />
</div>
`;
